--- a/eakte-eai/pom.xml
+++ b/eakte-eai/pom.xml
@@ -44,11 +44,10 @@
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
 
-	<scm>
-		<connection>scm:git:https://github.com/it-at-m/eakte-eai.git</connection>
-		<developerConnection>scm:git:https://github.com/it-at-m/eakte-eai.git</developerConnection>
-		<tag>HEAD</tag>
-	</scm>
+    <scm>
+        <connection>scm:git:${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git</connection>
+        <developerConnection>scm:git:${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git</developerConnection>
+  </scm>
 
 	<dependencyManagement>
 		<dependencies>
